--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,29 @@
 .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 10vh;
+  width: 100vw;
   font-size: 2rem;
+  background-color: #fff;
+}
+
+.header img {
+  padding: 20px 0 0 20px;
+  height: 50px;
+}
+
+.title {
+  padding-top: 20px;
+}
+
+button {
+  height: 40px;
+  width: 100px;
+  margin: 20px 20px 0 0;
+  font-size: 0.8rem;
+  border: dashed 2px rgb(157, 157, 255);
+  border-radius: 5px;
+  background: inherit;
+  cursor: pointer;
 }
