--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,21 +9,14 @@
 }
 
 .header img {
-  padding: 20px 0 0 20px;
-  height: 50px;
+  margin: 20px 0 0 20px;
+  height: 40px;
 }
 
 .title {
   padding-top: 20px;
 }
 
-button {
-  height: 40px;
-  width: 100px;
+.logIn {
   margin: 20px 20px 0 0;
-  font-size: 0.8rem;
-  border: dashed 2px rgb(157, 157, 255);
-  border-radius: 5px;
-  background: inherit;
-  cursor: pointer;
 }
