--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,16 +1,8 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #8bc34ad4;
-}
-
 .app {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  background-color: #8bc34ad4;
 }
