--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,22 +1,92 @@
 .header {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  height: 10vh;
+  flex-direction: column;
+  height: 20vh;
   width: 100vw;
-  font-size: 2rem;
+  font-size: 1rem;
   background-color: #fff;
 }
 
-.header img {
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.logo {
   margin: 20px 0 0 20px;
   height: 40px;
 }
 
+.center {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.center img {
+  height: 15px;
+  width: 40px;
+}
+
+.ant-dropdown-link{
+  margin-left: 20px;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.user button {
+  margin-right: 20px;
+}
+
 .title {
+  font-size: 1.2rem;
+  font-weight: bold;
   padding-top: 20px;
 }
 
 .logIn {
   margin: 20px 20px 0 0;
+}
+
+.view img,
+.view button {
+  height: 25px;
+  width: 25px;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.bottom img,
+.bottom button {
+  height: 25px;
+  width: 25px;
+}
+
+.bottom span {
+  border: 1px solid black;
+  height: 40px;
+  background-color: #000;
+  margin: 0 10px 0 10px;
+}
+
+.settings {
+  margin-right: 20px;
+}
+
+.settings img {
+  cursor: pointer;
+  height: 25px;
+  width: 25px;
 }
