App/feat: add ErrorIndicator

--- a/src/components/error-indicator/error-indicator.scss
+++ b/src/components/error-indicator/error-indicator.scss
@@ -4,12 +4,13 @@
   flex-direction: column;
   align-items: center;
   color: #c78f22;
-}
+  margin: 20px auto;
 
-.error-indicator img {
-  margin-bottom: 1rem;
-}
+  img {
+    margin-bottom: 1rem;
+  }
 
-.error-indicator .boom {
-  font-size: 1.7rem;
+  .oops {
+    font-size: 1.7rem;
+  }
 }
