List-component/feat: sync with appData

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -4,6 +4,7 @@ $red-8: #a8071a;
 .list {
   font-size: 2rem;
   width: 90%;
+  margin: 2% auto;
 
   .ant-avatar-string {
     transform: scale(1.5) translateX(-50%) !important;
