--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -7,16 +7,25 @@
   transition: all 0.8s;
 }
 
-/* .ant-table-row-selected {
-  display: none;
-}
- */
-
 .none-visibility {
   display: none !important;
 }
 
-tr td {
+.table-block a {
+  color:black ;
+  text-decoration: underline;
+  transition: all 0.5s;
+}
+
+.table-block p {
+  margin: 0;
+}
+
+.table-block th {
+  text-align: center!important;
+}
+
+.table-block tr td {
   transition: all 0.5s !important;
 }
 
@@ -27,57 +36,15 @@ tr td {
     transition: all 0.8s;
   }
 
-  tr:hover td {
+  .table-block tr:hover td {
     background: unset !important;
     opacity: 0.7;
     transition: all 0.5s !important;
     cursor: default;
   }
-}
 
-
-// Add colors to events
-
-.type__project-task {
-  background-color: #ff000066;
-}
-  
-.type__js-task {
-  background-color: #00000070;
-}
-
-.type__test {
-  background-color: #0000ff71;
-}
-
-.type__crosscheck {
-  background-color: #0080006e;
-}
-
-.type__review {
-  background-color: #ff980070;
-}
-
-.type__broadcast-live {
-  background-color: #00968882;
-}
-
-.type__self-education {
-  background-color: #ff57229e;
-}
-
-.type__meetup {
-  background-color: #127d1285;
-}
-
-.type__interview {
-  background-color: #0926797a;
-}
-
-.type__presentation {
-  background-color: #0d606b9a;
-}
-
-.type__other {
-  background-color: #ecec5487;
+  .table-block a:hover {
+    color: red;
+    transition: all 0.5s;
+  }
 }
