Table-component/style: add a new color-style to rows

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,5 +1,20 @@
 // Add colors to events
 
+.type__project-task,
+.type__js-task,
+.type__test,
+.type__crosscheck,
+.type__review,
+.type__broadcast-live,
+.type__self-education,
+.type__meetup,
+.type__interview,
+.type__presentation,
+.type__other,
+.type__codewars {
+  box-shadow: 3px 0px 10px 5px #4534348a inset;
+}
+
 .type__project-task {
   background-color: #8bc34a63;
 }
@@ -45,5 +60,14 @@
 }
 
 .type__codewars {
-  background-color: #ff98004f;
+  background-color: #03a9f42b;
+}
+
+.type__deadline {
+  box-shadow: 3px 0px 6px 5px #ff000070 inset;
+}
+
+.type__inactive {
+  background-color: #afafaf24;
+  opacity: 0.4;
 }
