fix: set width: 100% to avoid  scroll-x

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   font-size: 1rem;
   background-color: #fff;
 }
