--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -1,9 +1,6 @@
-// .calendar {
-//   font-size: 2rem;
+.calendar {
+  // font-size: 2rem;
 
-// }
-
-.demo-app {
   display: flex;
   min-height: 100%;
   // padding: 3rem 1rem;
@@ -11,78 +8,92 @@
   font-size: 14px;
   width: 100%;
   background-color: #ffffff;
-}
 
-html,
-body,
-body > div,
-body > div > div {
-  /* the react root */
-  margin: 0;
-  padding: 0;
-  // height: 100%;
-}
+  // html,
+  // body,
+  // body > div,
+  // body > div > div {
+  //   /* the react root */
+  //   margin: 0;
+  //   padding: 0;
+  //   // height: 100%;
+  // }
 
-h2 {
-  margin: 0;
-  font-size: 16px;
-}
+  h2 {
+    margin: 0;
+    font-size: 16px;
+  }
 
-ul {
-  margin: 0;
-  padding: 0 0 0 1.5em;
-}
+  ul {
+    margin: 0;
+    padding: 0 0 0 1.5em;
+  }
 
-li {
-  margin: 1.5em 0;
-  padding: 0;
-}
+  li {
+    margin: 1.5em 0;
+    padding: 0;
+  }
 
-b {
-  /* used for event dates/times */
-  margin-right: 3px;
-}
-.demo-app-sidebar {
-  width: 300px;
-  line-height: 1.5;
-  background: #eaf9ff;
-  border-right: 1px solid #d3e2e8;
-}
+  b {
+    /* used for event dates/times */
+    margin-right: 3px;
+  }
+  .demo-app-sidebar {
+    width: 300px;
+    line-height: 1.5;
+    background: #eaf9ff;
+    border-right: 1px solid #d3e2e8;
+  }
 
-.demo-app-sidebar-section {
-  padding: 2em;
-}
+  .demo-app-sidebar-section {
+    padding: 2em;
+  }
 
-.demo-app-main {
-  flex-grow: 1;
-  padding: 3em;
-}
+  .demo-app-main {
+    flex-grow: 1;
+    padding: 3em;
+  }
 
-.fc {
-  /* the calendar root */
-  max-width: 1100px;
-  margin: 0 auto;
-}
+  .fc {
+    /* the calendar root */
+    max-width: 1100px;
+    margin: 0 auto;
+  }
 
-.fc .fc-button-primary {
-  outline: none;
-  color: #fff;
-  background: #1890ff;
-  border-color: #1890ff;
-  text-shadow: 0 -1px 0 #0000001f;
-  -webkit-box-shadow: 0 2px 0 #0000000b;
-  box-shadow: 0 2px 0 #0000000b;
-  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1)
-}
+  .fc .fc-button-primary {
+    outline: none;
+    color: #fff;
+    background: #1890ff;
+    border-color: #1890ff;
+    text-shadow: 0 -1px 0 #0000001f;
+    -webkit-box-shadow: 0 2px 0 #0000000b;
+    box-shadow: 0 2px 0 #0000000b;
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  }
 
-.fc .fc-button-primary:hover {
-  color: #fff;
-  background: #40a9ff;
-  border-color: #40a9ff;
-}
+  .fc .fc-button-primary:hover {
+    color: #fff;
+    background: #40a9ff;
+    border-color: #40a9ff;
+  }
 
-.fc .fc-button-primary:focus {
-  outline: 0;
-  box-shadow: none;
-}
+  .fc .fc-button-primary:focus {
+    outline: 0;
+    box-shadow: none;
+  }
 
+  .type__project-task,
+  .type__js-task,
+  .type__test,
+  .type__crosscheck,
+  .type__review,
+  .type__broadcast-live,
+  .type__self-education,
+  .type__meetup,
+  .type__interview,
+  .type__presentation,
+  .type__other,
+  .type__codewars {
+    box-shadow: 2px 2px 4px 1px #40373740;
+  }
+}
