feat: add click + open info-window

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -60,6 +60,10 @@
     margin: 0 auto;
   }
 
+  .fc-event .fc-event-main {
+    overflow: hidden;
+  }
+
   .fc .fc-button-primary {
     outline: none;
     color: #fff;
