Table-component/fix: fix dynamic time display

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -2,25 +2,10 @@
   background-color: transparent !important;
 }
 
-.type__project-task,
-.type__js-task,
-.type__test,
-.type__crosscheck,
-.type__review,
-.type__broadcast-live,
-.type__self-education,
-.type__meetup,
-.type__interview,
-.type__presentation,
-.type__other,
-.type__codewars {
-  box-shadow: 3px 0px 10px 5px #4534348a inset;
+.type__project-task {
+  background-color: #c7d0596e;
 }
 
-.type__project-task {
-  background-color: #8bc34a63;
-}
-  
 .type__js-task {
   background-color: #00000070;
 }
@@ -66,7 +51,7 @@
 }
 
 .type__deadline {
-  box-shadow: 3px 0px 6px 5px #ff000070 inset;
+  box-shadow: inset 31px 0 15px -10px #ff000078, inset -31px 0 15px -10px #ff000078;
 }
 
 .type__inactive {
