--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -25,18 +25,8 @@
   b {
     margin-right: 3px;
   }
-  .demo-app-sidebar {
-    width: 300px;
-    line-height: 1.5;
-    background: #eaf9ff;
-    border-right: 1px solid #d3e2e8;
-  }
 
-  .demo-app-sidebar-section {
-    padding: 2em;
-  }
-
-  .demo-app-main {
+  .app-main {
     flex-grow: 1;
     padding: 3em;
     @media (max-width: 576px) {
